force-app/main/default/objects/Request_Mapping_Line__c/Request_Mapping_Line__c.object-meta.xml
<CustomObject>
    <label>Request Mapping Line</label>
    <nameField>
        <displayFormat>RML - {00000}</displayFormat>
        <label>Request Mapping Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Mapping Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>