force-app/main/default/objects/Request_Mapping_Line__c/fields/Annotation__c.field-meta.xml
<CustomField>
    <fullName>Annotation__c</fullName>
    <label>Annotation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>