force-app/main/default/objects/Request_Mapping_Line__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prompt</fullName>
            </value>
            <value>
                <fullName>Data Context</fullName>
            </value>
            <value>
                <fullName>Files</fullName>
            </value>
            <value>
                <fullName>Grounding</fullName>
            </value>
            <value>
                <fullName>GPTfy Console Input Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>