force-app/main/default/objects/Request_Mapping_Line__c/fields/Request_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Request_Mapping__c</fullName>
    <label>Request Mapping</label>
    <referenceTo>Request_Mapping__c</referenceTo>
    <relationshipLabel>Request Mapping Lines</relationshipLabel>
    <relationshipName>Request_Mapping_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>